--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Dedafio</title>
+<title>Dedafio fullcycle</title>
 <h1> Full cycle</h1>
 
 <p>Um dos principais pontos para aumentar segurança e a garantia de que um commit foi realmente realizado por determinado desenvolvedor é a assinatura de commits utilizando GPG.
